<resources>
    <string name="app_name">Awesum</string>
    <string name="number_of_likes">%1$d likes</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="minutes_ago">%1$d minutes ago</string>
    <string name="all_comment">View all %1$d comments</string>
    <string name="done">done</string>
    <string name="description">Description</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="email">Email / Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="posts">Posts</string>
    <string name="likes">Likes</string>
    <string name="password">Password</string>
    <string name="login"> Log in</string>
    <string name="sign_up_now">Create new account</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_now">Already have an account?</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="upload_profile_image">Upload your profile image</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="option">Options</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="next">next</string>
    <string name="delete_post">Delete this post</string>
    <string name="lonely">There\'s a bit lonely here…</string>
    <string name="channel_name">"FCM"</string>
    <string name="channel_description">"FCM Notification Description"</string>
    <string name="your_story">Your Story</string>
    <string name="mark_all_read">Mark all as read?</string>
    <string name="delete_comment">Delete this comment</string>
    <string name="delete_comment_ques">Delete this comment?</string>
    <string name="edit_comment">Edit this comment</string>
    <string name="unhide_post">Unhide this post</string>
    <string name="hide_post">Hide this post</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="unhide_post_ques">Unhide this post?</string>
    <string name="hide_post_ques">Hide this post?</string>
    <string name="delete_post_ques">Delete this post?</string>
    <string name="follow_you">Follow you!</string>
    <string name="like_your_post">Liked your post!</string>
    <string name="commented_on_your_post">Commented on your post: </string>
    <string name="click_back">"Please click BACK again to exit"</string>
    <string name="required">Required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">"Password must have at least 6 characters"</string>
    <string name="please_wait">Please wait</string>
    <string name="username_exist">The username is already in use by another account</string>
    <string name="username_not_exist">The username does not exist</string>
    <string name="zero_image">Choose at least 1 file!</string>
    <string name="max_image">Maximum allowed number of photos: 6</string>
    <string name="max_video">Maximum allowed number of videos: 1</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="see_more"> See more</string>
</resources>
