<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetLeft="8dp"
            app:contentInsetStart="8dp"
            app:contentInsetStartWithNavigation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/username_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_setting"
                    android:visibility="gone" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/number_of_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/posts" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_follower"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/number_of_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/followers" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_following"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/number_of_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/following" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/fullname_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textStyle="bold"
        tools:text="fullname" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        tools:text="bio" />

    <Button
        android:id="@+id/follow_button"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/default_button"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:visibility="gone" />

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/profile_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/swipe_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIconTint="@color/selector_tab"
            app:tabIndicatorColor="@color/colorBlack"
            app:tabMode="fixed" />
    </androidx.viewpager.widget.ViewPager>
</LinearLayout>